test ads added for iphone.

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,8 @@
                 admobid = { // for iOS
 //                    banner: 'ca-app-pub-6869992474017983/4806197152',
 //                    interstitial: 'ca-app-pub-6869992474017983/7563979554'
+                    banner: 'ca-app-pub-7696229031817893/5319744763',
+                    interstitial: 'ca-app-pub-7696229031817893/6759451962'
                 };
             }
 
