Original ads for ios

--- a/www/index.html
+++ b/www/index.html
@@ -39,8 +39,8 @@
                 };
             } else if(/(ipod|iphone|ipad)/i.test(navigator.userAgent)) {
                 admobid = { // for iOS
-//                    banner: 'ca-app-pub-6869992474017983/4806197152',
-//                    interstitial: 'ca-app-pub-6869992474017983/7563979554'
+                    banner: 'ca-app-pub-7696229031817893/1076710362',
+                    interstitial: 'ca-app-pub-7696229031817893/2553443568'
                 };
             }
 
